{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 551,
  "lineage": "add3b5d7-7d19-0252-d263-f49076e5be5c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577025156:vpc/vpc-0b60a109be6d2fdd4",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a95d4735898d516e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b063ee311d4f7f8c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b60a109be6d2fdd4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0deed6544da180b6e",
            "owner_id": "888577025156"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08831e6eabcf09976",
            "arn": "arn:aws:ec2:us-east-1:888577025156:elastic-ip/eipalloc-08831e6eabcf09976",
            "association_id": "eipassoc-01f04baac4461ae83",
            "domain": "vpc",
            "id": "eipalloc-08831e6eabcf09976",
            "instance": "i-0e894f7b595c6c6a0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f8806c50a7163955",
            "private_dns": "ip-172-31-62-234.ec2.internal",
            "private_ip": "172.31.62.234",
            "public_dns": "ec2-52-86-98-150.compute-1.amazonaws.com",
            "public_ip": "52.86.98.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "quiz-arena-app-eip"
            },
            "tags_all": {
              "Name": "quiz-arena-app-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_elasticache_cluster.redis",
            "aws_elasticache_subnet_group.redis_subnet",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_iam_role.lambda_role",
            "aws_instance.app_server",
            "aws_lambda_function.quiz_questions",
            "aws_lambda_function_url.quiz_questions_url",
            "aws_network_interface.app_eni",
            "aws_network_interface.worker_eni",
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "aws_security_group.redis_sg",
            "data.archive_file.lambda_zip",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "worker_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cc0f245df653ed0",
            "arn": "arn:aws:ec2:us-east-1:888577025156:elastic-ip/eipalloc-05cc0f245df653ed0",
            "association_id": "eipassoc-011fd22edc35fbb95",
            "domain": "vpc",
            "id": "eipalloc-05cc0f245df653ed0",
            "instance": "i-0289beeee22690a4a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0abf6d711cf777af0",
            "private_dns": "ip-172-31-68-67.ec2.internal",
            "private_ip": "172.31.68.67",
            "public_dns": "ec2-100-49-119-89.compute-1.amazonaws.com",
            "public_ip": "100.49.119.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "quiz-arena-worker-eip"
            },
            "tags_all": {
              "Name": "quiz-arena-worker-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_elasticache_cluster.redis",
            "aws_elasticache_subnet_group.redis_subnet",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_iam_role.lambda_role",
            "aws_instance.worker_server",
            "aws_lambda_function.quiz_questions",
            "aws_lambda_function_url.quiz_questions_url",
            "aws_network_interface.app_eni",
            "aws_network_interface.worker_eni",
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "aws_security_group.redis_sg",
            "data.archive_file.lambda_zip",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3caa1cf4417e51b",
            "arn": "arn:aws:ec2:us-east-1:888577025156:instance/i-0e894f7b595c6c6a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "quiz-arena-ec2-profile",
            "id": "i-0e894f7b595c6c6a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "quiz-arena-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f8806c50a7163955"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8806c50a7163955",
            "private_dns": "ip-172-31-62-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.62.234",
            "public_dns": "ec2-18-214-89-167.compute-1.amazonaws.com",
            "public_ip": "18.214.89.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08952ecae61563c04",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "quiz-arena-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b975deaf2349495f",
            "tags": {
              "Name": "quiz-arena-app-server"
            },
            "tags_all": {
              "Name": "quiz-arena-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07fffd2f29c747de7"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_elasticache_cluster.redis",
            "aws_elasticache_subnet_group.redis_subnet",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_iam_role.lambda_role",
            "aws_lambda_function.quiz_questions",
            "aws_lambda_function_url.quiz_questions_url",
            "aws_network_interface.app_eni",
            "aws_network_interface.worker_eni",
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "aws_security_group.redis_sg",
            "data.archive_file.lambda_zip",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3caa1cf4417e51b",
            "arn": "arn:aws:ec2:us-east-1:888577025156:instance/i-0289beeee22690a4a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "quiz-arena-ec2-profile",
            "id": "i-0289beeee22690a4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "quiz-arena-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0abf6d711cf777af0"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abf6d711cf777af0",
            "private_dns": "ip-172-31-68-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.68.67",
            "public_dns": "ec2-44-192-78-48.compute-1.amazonaws.com",
            "public_ip": "44.192.78.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0941db27e48eb1527",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "quiz-arena-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fca693cc4a240381",
            "tags": {
              "Name": "quiz-arena-worker-server"
            },
            "tags_all": {
              "Name": "quiz-arena-worker-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07fffd2f29c747de7"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_elasticache_cluster.redis",
            "aws_elasticache_subnet_group.redis_subnet",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_iam_role.lambda_role",
            "aws_lambda_function.quiz_questions",
            "aws_lambda_function_url.quiz_questions_url",
            "aws_network_interface.app_eni",
            "aws_network_interface.worker_eni",
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "aws_security_group.redis_sg",
            "data.archive_file.lambda_zip",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "app_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577025156:network-interface/eni-0f8806c50a7163955",
            "id": "eni-0f8806c50a7163955",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:e6:2e:c8:25:29",
            "owner_id": "888577025156",
            "private_dns_name": "ip-172-31-62-234.ec2.internal",
            "private_ip": "172.31.62.234",
            "private_ip_list": [
              "172.31.62.234"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.62.234"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07fffd2f29c747de7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b975deaf2349495f",
            "tags": {
              "Name": "quiz-arena-app-eni"
            },
            "tags_all": {
              "Name": "quiz-arena-app-eni"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "worker_eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577025156:network-interface/eni-0abf6d711cf777af0",
            "id": "eni-0abf6d711cf777af0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "16:ff:e9:de:af:21",
            "owner_id": "888577025156",
            "private_dns_name": "ip-172-31-68-67.ec2.internal",
            "private_ip": "172.31.68.67",
            "private_ip_list": [
              "172.31.68.67"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.31.68.67"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07fffd2f29c747de7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fca693cc4a240381",
            "tags": {
              "Name": "quiz-arena-worker-eni"
            },
            "tags_all": {
              "Name": "quiz-arena-worker-eni"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577025156:security-group/sg-07fffd2f29c747de7",
            "description": "EC2 ports for Quiz Arena",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fffd2f29c747de7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Backend cross-server",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Node exporter metrics",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9100
              }
            ],
            "name": "quiz-arena-ec2-sg",
            "name_prefix": "",
            "owner_id": "888577025156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "quiz-arena-ec2-sg"
            },
            "tags_all": {
              "Name": "quiz-arena-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b60a109be6d2fdd4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577025156:security-group/sg-0fe5bebaef1d2f901",
            "description": "RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe5bebaef1d2f901",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fffd2f29c747de7"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "quiz-arena-rds-sg",
            "name_prefix": "",
            "owner_id": "888577025156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "quiz-arena-rds-sg"
            },
            "tags_all": {
              "Name": "quiz-arena-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b60a109be6d2fdd4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577025156:security-group/sg-03ef216b91f232d48",
            "description": "ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ef216b91f232d48",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from EC2",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fffd2f29c747de7"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "quiz-arena-redis-sg",
            "name_prefix": "",
            "owner_id": "888577025156",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "quiz-arena-redis-sg"
            },
            "tags_all": {
              "Name": "quiz-arena-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b60a109be6d2fdd4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}